examples/test/testpolicy399.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy399
  namespace: namespace142
spec:
  podSelector:
    matchLabels:
      key24: value14
      key7: value33
      key23: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value0
          key16: value39
      podSelector:
        matchLabels:
          key3: value25
